# qt-gstreamer-example

./: .clang-format  .gitignore  Makefile  README.md
examples/appsink-src/: main.cpp
examples/devmon/: main.cpp  mainwindow.cpp  mainwindow.h
examples/player/: main.cpp  mediaapp.cpp  mediaapp.h  player.cpp  player.h
examples/qmlplayer/: main.cpp  player.cpp  player.h
examples/qmlplayer2/: main.cpp  player.cpp  player.h
examples/recorder/: main.cpp
examples/voip/: main.cpp
qmloverlay/: main.cpp
qmlsink/: CMakeLists.txt  SetPlaying.cpp  SetPlaying.h  main.cpp  play.pro  video_streamer.cpp
qmlsink-dynamically-added/: main.cpp
qmlsink-multisink/: main.cpp
qmlsink-multisink/videoitem/: videoitem.cpp  videoitem.h
qmlsrc/: main.cpp
